my second commit

--- a/point.html
+++ b/point.html
@@ -35,11 +35,11 @@
 		<div>
 			<h2>Templates-&gt</h2>
 			<p>
-				Explore the Next.js playground.
+				Explore the Next.js playground..
 			</p>
 		</div>
 		<div>
-			<h2>Deploy-&gt</h2>
+			<h2>Deploy-&gt;</h2>
 			<p>
 				Instanly deploy your Next.js site to a shareable URLwith vercel.
 			</p>
